# TableAgent

./: .gitignore  README.md  config.example.yaml  pyproject.toml
TableAgent/: README.md  __init__.py  agents.py  api.py  clients.py  config.py  llm.py  prompts.py  run_logging.py  server.py  service.py
TableAgent/QA/: PIPELINE.md  __init__.py  language.py  runner.py
TableAgent/agents/: __init__.py  base.py
TableAgent/artifacts/: __init__.py  layout.py  metadata.py  retrieval_cards.py  schema.py
TableAgent/benchmarks/: __init__.py  siflex.py
TableAgent/configs/: __init__.py  config.py  embedding_config.py  llm_config.py  models_config.py  table_agent.py  vlm_config.py
TableAgent/environment/: __init__.py  logger.py  notebook.py  qa_env.py
TableAgent/integrations/: __init__.py  models.py  qa.py  qa_cli.py  qa_package.py
TableAgent/perception/: __init__.py  metadata.py  structure.py
TableAgent/pipeline/: __init__.py  base.py  base_pipeline.py  common.py  layout_workflow.py  prompting.py  retrieval.py  (+5 more)
configs/: __init__.py  embedding_config.py  llm_config.py  vlm_config.py
datasets/: base.py
pipelines/: base.py  table_agent_pipeline.py
sample/: QA_sample.xlsx  multitab.xlsx  multitab_structure.yaml  relations.yaml  sample.py  sample.xlsx  schema_sample.yaml  structure.yaml  structure_sample.yaml
service/: __init__.py  api.py  cli.py  clients.py  runtime.py  server.py
table2img/: README.md  __init__.py  cli.py  core.py  requirements.txt  smoke_semitab.py
tests/: mock_policy.py  test_api.py  test_cli.py  test_clients.py  test_config_loading.py  test_multitab_operator.py  test_qa_integration.py  test_qa_package.py  test_relations_extractor.py  test_retrieval_hybrid.py  test_server.py  test_service.py  test_siflex_benchmark.py  test_siflex_formatter.py  test_table_agent_mas.py  test_table_agent_merged_cells.py  test_table_agent_pipeline.py  test_table_agent_qa.py  test_table_retrieval_contract.py  test_workbook_artifacts.py  test_workbook_converter.py
utils/: workbook_converter.py
(+80 files in other folders)
